Added support for all Bogus objects via the DataType.Bogus

--- a/src/DataMasker.Examples/example-configs/config-example1.json
+++ b/src/DataMasker.Examples/example-configs/config-example1.json
@@ -38,7 +38,8 @@
         },
         {
           "name": "Address",
-          "type": "FullAddress",
+          "type": "Bogus",
+          "stringFormatPattern": "{{address.fullAddress}}",
           "retainNullValues": false
         },
         {
