--- a/src/DataMasker.Examples/example-configs/config-example1.json
+++ b/src/DataMasker.Examples/example-configs/config-example1.json
@@ -2,6 +2,9 @@
   "dataSource": {
     "type": "InMemoryFake"
   },
+  "dataGeneration": {
+    "locale": "en"
+  },
   "tables": [    
     {
       "name": "Users",
