Added console runner

--- a/src/DataMasker.Runner/DataMasker.Runner.csproj
+++ b/src/DataMasker.Runner/DataMasker.Runner.csproj
@@ -57,6 +57,8 @@
   <ItemGroup>
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgressbarUpdate.cs" />
+    <Compile Include="ProgressType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
