--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,5 +7,12 @@ build:
   verbosity: minimal
 artifacts:
 - path: src\DataMasker.Runner\bin\release\
-  name: datamasker.cli.release.$(version)
+  name: datamasker.cli.release.{version}
   type: Auto
+  
+assembly_info:
+  patch: true
+  file: AssemblyInfo.*
+  assembly_version: "{version}"
+  assembly_file_version: "{version}"
+  assembly_informational_version: "{version}"
