--- a/src/DataMasker.Examples/example-configs/config-example1.json
+++ b/src/DataMasker.Examples/example-configs/config-example1.json
@@ -32,7 +32,8 @@
         },
         {
           "name": "DOB",
-          "type": "DateOfBirth"
+          "type": "DateOfBirth",
+          "min": "1950-01-01"          
         },
         {
           "name": "Gender",
@@ -50,6 +51,13 @@
           "type": "PhoneNumber",
           "retainNullValues": false,
           "stringFormatPattern": "+447#########"
+        },
+        {
+          "name": "Bio",
+          "type": "Lorem",
+          "retainNullValues": false,
+          "min": 5,
+          "max":  10
         }
       ]
     }
