Windows Authentication support for issue #5 by adding optional connection string. Updated documentation.

--- a/src/DataMasker.Examples/example-configs/config-example1.json
+++ b/src/DataMasker.Examples/example-configs/config-example1.json
@@ -1,6 +1,9 @@
 ﻿{
   "dataSource": {
-    "type": "InMemoryFake"
+    "type": "SqlServer",
+    "config": {
+      "connectionString": "awdawda"
+    }
   },
   "dataGeneration": {
     "locale": "en"
