updated example json to something useful ;-/

--- a/src/DataMasker.Examples/example-configs/config-example1.json
+++ b/src/DataMasker.Examples/example-configs/config-example1.json
@@ -2,7 +2,7 @@
   "dataSource": {
     "type": "SqlServer",
     "config": {
-      "connectionString": "awdawda"
+      "connectionString": "Data Source=(localdb)\\mssqllocaldb;Initial Catalog=Clients;Integrated Security=SSPI;"
     }
   },
   "dataGeneration": {
