Updated documentation. Updated example. Removed redudant parenthesis.

--- a/src/DataMasker.Examples/example-configs/config-example1.json
+++ b/src/DataMasker.Examples/example-configs/config-example1.json
@@ -21,6 +21,7 @@
         {
           "name": "LastName",
           "type": "LastName",
+          "retainEmptyStringValues": true,
           "useGlobalValueMappings": true,
           "valueMappings": {
             "oldValue": "Jones",
