Updated to allow table configuration to be loaded in via an external json configuration file.

--- a/src/DataMasker.Examples/DataMasker.Examples.csproj
+++ b/src/DataMasker.Examples/DataMasker.Examples.csproj
@@ -56,7 +56,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="example-configs\config-example2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="example-configs\config-example1.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="example-configs\config-example2-table-config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
