--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -22,5 +22,12 @@ jobs:
     - name: Install dependencies
       run: dotnet restore ./src/DataMasker/DataMasker.csproj
     - name: Build
-      run: dotnet build ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore 
-
+      run: dotnet build ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore
+    - name: Publish      
+      run: dotnet publish ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore -o ./build/
+    - name: Collect Artifact 
+    - uses: actions/upload-artifact@v2
+      with:
+        name: build.${{GITHUB_RUN_NUMBER}}
+        path: ./build/**.*
+    
