--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build
       run: dotnet build ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore
     - name: Publish      
-      run: dotnet publish ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore -o ./build/
+      run: dotnet pack ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore -o ./build/
     - name: Collect Artifact 
       uses: actions/upload-artifact@v2
       with:
