--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -24,10 +24,10 @@ jobs:
     - name: Build
       run: dotnet build ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore
     - name: Publish      
-      run: dotnet pack ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore -o ./build/
+      run: dotnet pack ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore -o ./build/ /p:Version=2.0.${{github.run_number}}
     - name: Collect Artifact 
       uses: actions/upload-artifact@v2
       with:
-        name: build.${{github.run_number}}
+        name: build.2.0.${{github.run_number}}
         path: ./build/**.*
     
