--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -32,5 +32,5 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: DataMasker.${{env.VERSION_NUMBER}}
-        path: ./build/**.*
+        path: ./build/DataMasker.2.0.11.nupkg
     
