--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -38,7 +38,8 @@ jobs:
       uses: montudor/action-zip@v1.0.0
       with:
         args: zip -qq -r DataMasker.Runner.zip ./src/DataMasker.Runner/bin/Release/publish/
-    - name: Create Release (DataMasker.Runner)    
+    - name: Create Release (DataMasker.Runner)
+      uses: ncipollo/release-action@v1.8.4
       with:
         artifacts: "DataMasker.Runner.zip"
         bodyFile: "ReadMe.md"
