--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -39,6 +39,11 @@ jobs:
       uses: montudor/action-zip@v1.0.0
       with:
         args: zip -qq -r DataMasker.Runner.zip ./src/DataMasker.Runner/bin/Release/netcoreapp3.1/publish/
+    - name: Collect Artifact 
+      uses: actions/upload-artifact@v2
+      with:
+        name: DataMasker.Runner.${{env.VERSION_NUMBER}}
+        path: ./DataMasker.Runner.zip
     - name: Create Release (DataMasker.Runner)
       uses: ncipollo/release-action@v1.8.4
       with:
