--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -50,4 +50,5 @@ jobs:
         artifacts: "DataMasker.Runner.zip"
         bodyFile: "ReadMe.md"
         token: ${{ secrets.GITHUB_TOKEN }}
+        tag: ${{env.VERSION_NUMBER}}
     
