--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,11 +1,6 @@
 name: .NET Core
 
-on:
-  workflow_dispatch:  
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [workflow_dispatch]
 
 jobs:
   build:
