--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -5,7 +5,7 @@ on: [workflow_dispatch]
 jobs:
   build:
     env:
-      VERSION_NUMBER: 2.0.${{github.run_number}}-alpha
+      VERSION_NUMBER: 2.0.${{github.run_number}}
     runs-on: ubuntu-latest
 
     steps:
