--- a/src/DataMasker.Examples/DataMasker.Examples.csproj
+++ b/src/DataMasker.Examples/DataMasker.Examples.csproj
@@ -2,16 +2,16 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.15" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="../DataMasker/DataMasker.csproj" />
   </ItemGroup>
   <ItemGroup>
-  <None Update="example-configs\**" CopyToOutputDirectory="Always"/>
+  <None Update="example-configs\**" CopyToOutputDirectory="Always" />
   </ItemGroup>
 </Project>
