--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -10,10 +10,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET Core    
-      uses: actions/setup-dotnet@v1      
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 3.1.301
+        dotnet-version: 7.0.x
     - name: Install dependencies
       run: dotnet restore ./src/DataMasker/DataMasker.csproj
     - name: Build Library
