--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -17,9 +17,9 @@ jobs:
     - name: Install dependencies
       run: dotnet restore ./src/DataMasker/DataMasker.csproj
     - name: Build Library
-      run: dotnet build ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore -r win-x64 
+      run: dotnet build ./src/DataMasker/DataMasker.csproj -c Release -r win-x64 --self-contained
     - name: Publish Library
-      run: dotnet pack ./src/DataMasker/DataMasker.csproj --configuration Release --no-restore -o ./build/ /p:Version=${{env.VERSION_NUMBER}} -r win-x64 
+      run: dotnet pack ./src/DataMasker/DataMasker.csproj -c Release -o ./build/ /p:Version=${{env.VERSION_NUMBER}} -r win-x64 --self-contained
     - name: Push Nuget
        
       run: dotnet nuget push ./build/DataMasker.${{env.VERSION_NUMBER}}.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
@@ -29,7 +29,7 @@ jobs:
         name: DataMasker.${{env.VERSION_NUMBER}}
         path: ./build/DataMasker.${{env.VERSION_NUMBER}}.nupkg
     - name: Build CLI
-      run: dotnet publish ./src/DataMasker.Runner --configuration Release -r win-x64
+      run: dotnet publish ./src/DataMasker.Runner -c Release -r win-x64 --self-contained
     - name: action-zip
       uses: montudor/action-zip@v1.0.0
       with:
